# Copyright (C) 2020 by Franco Venturi
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

########################################################################
# Install public header files
########################################################################
install(FILES
    rf103.h
    DESTINATION include
)
